--- a/company-api.html
+++ b/company-api.html
@@ -288,6 +288,7 @@
           </div>
 
           <div class="col-12 col-md-12 text-center">
+
             <img class="img img-fluid rounded mb-2" alt="ooo" src="assets/img/illustrations/Company-api_1_1_.png">
 
             <div>
@@ -301,6 +302,13 @@
             </div>
 
           </div>
+
+          <p class="small text-center text-muted mt-6 mt-md-8" data-aos="fade-up">Not a developer?
+            <a href="https://sapiengraph.com/" target="_blank" class="font-weight-bold text-success">
+              Try Sapiengraph<i class="neu-arrow"></i>
+            </a>.
+            Sapiengraph integrates Proxycurl APIs within Google Sheets.
+          </p>
 
         </div> <!-- / .row -->
       </div> <!-- container heading--> 
@@ -1720,9 +1728,6 @@ curl \
       </div> <!-- container Employee Count Endpoint-->
     </section> <!--Employee Count Endpoint Fold-->
 
-
-    </section>
-
     <!-- THIRD FOLD
     ================================================== -->
     <section class="pt-8 pt-md-12 pb-8 pb-md-12 border-bottom">
@@ -1751,7 +1756,7 @@ curl \
               <!-- Body -->
               <div class="card-body my-auto">
   
-                <img alt="chart icon" class="img-fluid mb-4" width="56" src="assets/dwarf forms/company-search.svg">
+                <img alt="company search icon" class="img-fluid mb-4" width="56" src="assets/dwarf forms/company-search.svg">
   
                 <!-- Heading -->
                 <h3 class="mt-auto">
@@ -1825,7 +1830,7 @@ curl \
               <!-- Body -->
               <div class="card-body my-auto">
   
-                <img alt="chart icon" class="img-fluid mb-4" width="56" src="assets/dwarf forms/job-search.svg">
+                <img alt="job search icon" class="img-fluid mb-4" width="56" src="assets/dwarf forms/job-search.svg">
   
                 <!-- Heading -->
                 <h3 class="mt-auto">
