--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,12 @@
           </div>
         </div> <!-- Button-->
 
-        <p class="small text-center text-muted mb-6 mb-md-8" data-aos="fade-up">Not a developer? <a href="https://sapiengraph.com/" target="_blank" class="font-weight-bold text-success">Try Sapiengraph<i class="neu-arrow"></i></a> . Sapiengraph integrates Proxycurl APIs within Google Sheets.</p>
+        <p class="small text-center text-muted mb-6 mb-md-8" data-aos="fade-up">
+          Not a developer?
+          <a href="https://sapiengraph.com/" target="_blank" class="font-weight-bold text-success">
+            Try Sapiengraph<i class="neu-arrow"></i>
+          </a> . Sapiengraph integrates Proxycurl APIs within Google Sheets.
+        </p>
         
         <div class="mx-n16 border-bottom">
 
@@ -1345,7 +1350,6 @@
       </div> <!-- container heading--> 
 
     </section>
-    
 
     <!-- THIRD FOLD-->
     <section class="pt-8 pt-md-11 pb-10 pb-md-11 border-bottom bg-white">
