--- a/linkedin.html
+++ b/linkedin.html
@@ -379,6 +379,13 @@
             </button>            
             </form>
 
+            <p class="small text-center text-muted" data-aos="fade-up">Not a developer?
+              <a href="https://sapiengraph.com/" target="_blank" class="font-weight-bold text-success">
+                Try Sapiengraph<i class="neu-arrow"></i>
+              </a>
+              . Sapiengraph integrates Proxycurl APIs within Google Sheets.
+            </p>
+
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
