--- a/email-lookup-api-endpoint.html
+++ b/email-lookup-api-endpoint.html
@@ -97,23 +97,38 @@
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
-                          <img class="icon" width="24" alt="database icon" src="assets/img/logos/database icon.svg"> LinkDB
+                          <img class="icon mb-1" width="24" alt="database icon" src="assets/img/logos/database icon.svg"> LinkDB
                         </h6>
 
                         <!-- List -->
                         <a class="dropdown-item mb-5" href="linkdb.html">
-                          Database of public <br>
-                          LinkedIn profiles
+                          Public LinkedIn Profile Dataset
                         </a>
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
-                          <img class="icon" width="24" alt="emoji icon" src="assets/img/logos/emoji smiley.svg"> Freebies
+                          <img class="icon mb-1" width="20" alt="table icon" src="assets/img/logos/table.svg"> Spreadsheet Addon
                         </h6>
 
                         <!-- List -->
+                        <a class="dropdown-item mb-5" href="https://sapiengraph.com" target="_blank">
+                          Sapiengraph - B2B Enrichment <br class="d-block">
+                          in Google Sheets
+                        </a>
+
+                        <!-- Heading -->
+                        <h6 class="dropdown-header">
+                          <img class="icon mb-1" width="24" alt="emoji icon" src="assets/img/logos/emoji smiley.svg"> Free Tools
+                        </h6>
+
+                        <!-- List -->
+                        <a class="dropdown-item mb-5 mb-lg-0" href="#!">
+                          Profile Picture API
+                        </a>
+
+                        <!-- List -->
                         <a class="dropdown-item mb-5 mb-lg-0" href="disposable-email.html">
-                          Disposable Email Checker
+                          Disposable Email Checker API
                         </a>
 
                       </div>
@@ -122,7 +137,7 @@
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
-                          <img class="icon" width="24" alt="Proxycurl logo" src="assets/img/logos/proxycurl logo blue.svg"> Proxycurl API
+                          <img class="icon mb-1" width="24" alt="Proxycurl logo" src="assets/img/logos/proxycurl logo blue.svg"> Proxycurl API
                         </h6>
 
                         <!-- List -->
@@ -133,18 +148,18 @@
                           Company API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Jobs API
-                        </a>
-                        <a class="dropdown-item" href="#!">
-                          School API
-                        </a>
-                        <a class="dropdown-item" href="#!">
                           Search API
                         </a>
                         <a class="dropdown-item" href="#!">
                           Contact API
                         </a>
-                        <a class="dropdown-item mb-5" href="#!">
+                        <a class="dropdown-item" href="#!">
+                          School API
+                        </a>
+                        <a class="dropdown-item" href="#!">
+                          Jobs API
+                        </a>
+                        <a class="dropdown-item mb-5 font-weight-bold" href="#!">
                           API Documentation <i class="fe fe-arrow-right"></i>
                         </a>
 
@@ -154,25 +169,6 @@
                   </div>
                 </div>
               </div> <!-- / .row -->
-            </li>
-
-            <!-- Pricing -->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Pricing <i class="fe fe-chevron-down"></i>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="pricing.html">
-                    Proxycurl API Pricing
-                  </a>
-                </li>
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    LinkDB Pricing
-                  </a>
-                </li>
-              </ul>
             </li>
 
             <!-- Solution -->
@@ -190,12 +186,12 @@
 
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
-                    Accelerating growth-stage startups
+                    LinkedIn Scraper API
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
-                    Sales and Marketing automation
+                    Crunchbase Scraper API
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
@@ -205,38 +201,62 @@
                 </li>
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
-                    Talent identification
+                    Accelerating Growth Startups
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
-                    LinkedIn Scraper API
+                    Sales and Marketing Automation
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
-                    Clearbit alternative
+                    Data for HR Tech
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
-                    PeopleDataLabs alternative
+                    Clearbit Alternative
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    PeopleDataLabs Alternative
                   </a>
                 </li>
               </ul>
             </li>
 
-            <!-- FAQ -->
-            <li class="nav-item">
-              <a class="nav-link" id="navbarAccount" href="#!">
-                FAQ
+            <!-- Pricing -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Pricing <i class="fe fe-chevron-down"></i>
               </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="pricing.html">
+                    Proxycurl API
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    LinkDB
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <!-- Blog -->
             <li class="nav-item">
               <a class="nav-link" id="navbarAccount" href="#!">
                 Blog
+              </a>
+            </li>
+
+            <!-- FAQ -->
+            <li class="nav-item">
+              <a class="nav-link" id="navbarAccount" href="#!">
+                FAQ
               </a>
             </li>
 
@@ -1010,6 +1030,11 @@
               <li class="mb-3">
                 <a href="#!" class="text-reset">
                   Affiliate Program
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="https://sapiengraph.com" target="_blank" class="text-reset">
+                  Sapiengraph - B2B Enrichment in Google Sheets
                 </a>
               </li>
             </ul>
