--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
-                          <img class="icon" width="24" alt="database icon" src="assets/img/logos/database icon.svg"> LinkDB
+                          <img class="icon mb-1" width="24" alt="database icon" src="assets/img/logos/database icon.svg"> LinkDB
                         </h6>
 
                         <!-- List -->
@@ -107,7 +107,18 @@
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
-                          <img class="icon" width="24" alt="emoji icon" src="assets/img/logos/emoji smiley.svg"> Free Tools
+                          <img class="icon mb-1" width="20" alt="table icon" src="assets/img/logos/table.svg"> Spreadsheet Addon
+                        </h6>
+
+                        <!-- List -->
+                        <a class="dropdown-item mb-5" href="https://sapiengraph.com" target="_blank">
+                          Sapiengraph - B2B Enrichment <br class="d-block">
+                          in Google Sheets
+                        </a>
+
+                        <!-- Heading -->
+                        <h6 class="dropdown-header">
+                          <img class="icon mb-1" width="24" alt="emoji icon" src="assets/img/logos/emoji smiley.svg"> Free Tools
                         </h6>
 
                         <!-- List -->
@@ -126,7 +137,7 @@
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
-                          <img class="icon" width="24" alt="Proxycurl logo" src="assets/img/logos/proxycurl logo blue.svg"> Proxycurl API
+                          <img class="icon mb-1" width="24" alt="Proxycurl logo" src="assets/img/logos/proxycurl logo blue.svg"> Proxycurl API
                         </h6>
 
                         <!-- List -->
@@ -1480,6 +1491,11 @@
               <li class="mb-3">
                 <a href="#!" class="text-reset">
                   Affiliate Program
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="https://sapiengraph.com" target="_blank" class="text-reset">
+                  Sapiengraph - B2B Enrichment in Google Sheets
                 </a>
               </li>
             </ul>
