--- a/search-api.html
+++ b/search-api.html
@@ -409,11 +409,11 @@ curl \
     -G \
     -H "Authorization: Bearer ${YOUR_API_KEY}" \
     'https://nubela.co/proxycurl/api/search/person/' \  
-<span class="badge badge-rounded-circle badge-primary-soft px-2 py-1">1</span> <span class="text-primary">--data-urlencode 'summary=(?i)clojure' \</span>
-<span class="badge badge-rounded-circle badge-success-soft px-2 py-1">2</span> <span class="text-success">--data-urlencode 'past_role_title=(?i)software engineer|\bswe\b' \</span>    
-<span class="badge badge-rounded-circle badge-info-soft px-2 py-1">3</span> <span class="text-info">--data-urlencode 'education_school_name=^(Brown University|Columbia University|Cornell University|Dartmouth College|Harvard University|University of Pennsylvania|Princeton University|Yale University)$' \
+<span class="badge badge-rounded-circle badge-primary px-2 py-1">1</span> <span class="text-primary">--data-urlencode 'summary=(?i)clojure' \</span>
+<span class="badge badge-rounded-circle badge-success px-2 py-1">2</span> <span class="text-success">--data-urlencode 'past_role_title=(?i)software engineer|\bswe\b' \</span>    
+<span class="badge badge-rounded-circle badge-info px-2 py-1">3</span> <span class="text-info">--data-urlencode 'education_school_name=^(Brown University|Columbia University|Cornell University|Dartmouth College|Harvard University|University of Pennsylvania|Princeton University|Yale University)$' \
     --data-urlencode 'education_field_of_study=(?i)computer science' \</span>
-<span class="badge badge-rounded-circle badge-danger-soft px-2 py-1">4</span> <span class="text-danger">--data-urlencode 'country=US'</span>    
+<span class="badge badge-rounded-circle badge-danger px-2 py-1">4</span> <span class="text-danger">--data-urlencode 'country=US'</span>    
                                   </code></pre>
     
                 </div>
@@ -502,10 +502,10 @@ curl \
     -G \
     -H "Authorization: Bearer ${YOUR_API_KEY}" \
     'https://nubela.co/proxycurl/api/search/company' \
-<span class="badge badge-rounded-circle badge-primary-soft px-2 py-1">1</span> <span class="text-primary">--data-urlencode 'type=PRIVATELY_HELD' \
+<span class="badge badge-rounded-circle badge-primary px-2 py-1">1</span> <span class="text-primary">--data-urlencode 'type=PRIVATELY_HELD' \
     --data-urlencode 'country=US' \
     --data-urlencode 'founded_after_year=2019' \ </span>
-<span class="badge badge-rounded-circle badge-success-soft px-2 py-1">2</span> <span class="text-success">--data-urlencode 'funding_raised_after=2021-04-01' \
+<span class="badge badge-rounded-circle badge-success px-2 py-1">2</span> <span class="text-success">--data-urlencode 'funding_raised_after=2021-04-01' \
     --data-urlencode 'funding_amount_min=5000000' </span></code></pre>
     
                 </div>
