--- a/products.html
+++ b/products.html
@@ -285,7 +285,7 @@
         <div class="row align-items-center min-vh-100 py-8 py-md-11">
 
             <!-- Heading -->
-            <h1 class="display-4 mb-0 text-center px-md-10 mb-6">
+            <h1 class="display-4 mb-0 text-center px-md-10 px-6 mb-6">
               No matter what option you choose, you'll receive B2B data processed from trusted sources like LinkedIn and Crunchbase.<br>
               <span class="text-primary font-weight-bold">Welcome to Proxycurl.</span>
             </h1>
@@ -306,7 +306,7 @@
                         </h3>
             
                         <p class="mb-md-0 text-gray-700">
-                            On-demand data via an API. By developers, for developers.
+                            On-demand data via a REST API. By developers, for developers.
                         </p>
 
                     </div>
