--- a/jobs-api.html
+++ b/jobs-api.html
@@ -479,7 +479,8 @@
 
               <pre>
                 <code class="language-python">
-curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorization: Bearer &lt;API_KEY&gt;' -H 'Connection: keep-alive' 'https://nubela.co/proxycurl/api/v2/linkedin?url=<span class="text-warning">https%3A%2F%2Fwww.linkedin.com%2Fin%2Ftimferriss</span></code></pre>
+<span class="lead"># List jobs posted by Apple</span>
+$ curl ... <span class="text-warning">https://apple.com</span></code></pre>
             </div>
 
             <!--arrow-->
@@ -550,7 +551,8 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
 
               <pre>
                 <code class="language-python">
-curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorization: Bearer &lt;API_KEY&gt;' -H 'Connection: keep-alive' 'https://nubela.co/proxycurl/api/v2/linkedin?url=<span class="text-warning">https%3A%2F%2Fwww.linkedin.com%2Fin%2Ftimferriss</span></code></pre>
+<span class="lead"># Job detail posted by Apple</span>
+$ curl ... <span class="text-warning">https://apple.com</span></code></pre>
             </div>
 
             <!--arrow-->
