--- a/buyer-intent-sourcing.html
+++ b/buyer-intent-sourcing.html
@@ -279,13 +279,13 @@
       </div>
     </nav>
 
-    <!-- Second fold -->
+    <!-- FIRST fold -->
     <section class="py-8 py-md-11 border-bottom" data-jarallax data-speed=".8">
       <div class="container">
 
         <div class="row justify-content-center">
 
-          <div class="col-12 col-md-12 text-center mb-md-8 mb-6">
+          <div class="col-12 col-md-10 text-center mb-md-9 mb-6">
     
             <h2 class="text-center display-3">
               <span class="text-primary font-weight-bold">Job Changes In The Past Week</span>
@@ -293,6 +293,12 @@
 
             <p class="lead text-muted">These are 20 random profiles whom we found to have changed jobs last week.</p>
     
+            </div>
+
+            <div class="col-12 text-center text-md-left"> 
+            <div class="alert alert-light text-gray-700" role="alert">
+              This is a demo for our blog post of <span class="font-weight-bold">Scraping LinkedIn Profiles to Monitor for Job Changes</span>.
+            </div>
             </div>
 
             <div class="col-12">  
@@ -337,7 +343,7 @@
                           <div class="col-9 ml-n4 text-truncate">
                             <p class="text-black mb-0">Steven Goh</p>
                             <a class="text-primary small" href="#!" target="_blank">
-                              <i class="neu-br-linkedin-sq ml-n1"></i> linkedin.com/stevengoh
+                              <i class="neu-br-linkedin-sq ml-n1"></i> linkedin.com/in/stevengoh
                             </a>
                           </div>
                         </div>
@@ -444,7 +450,7 @@
 
                   <div class="row">
 
-                    <div class="col-12 col-md-5 pt-1">
+                    <div class="col-12 col-md-5 pt-1 mb-5 mb-md-0">
                       <img class="img img-fluid rounded" alt="job changes illustration" src="assets/img/illustrations/TLC_Linkedin_Job_ChangesArtboard_1.png">
                     </div>
   
