--- a/buyer-intent-sourcing.html
+++ b/buyer-intent-sourcing.html
@@ -415,7 +415,7 @@
 
                 <div class="row">
 
-                  <div class="col-12 col-md-6">
+                  <div class="col-12 col-md-6 table-responsive">
                     <nav aria-label="Page">
                       <ul class="pagination">
                         <li class="page-item disabled">
@@ -431,7 +431,7 @@
                     </nav>
                   </div>
 
-                  <div class="col-12 col-md-6 text-right">
+                  <div class="col-12 col-md-6 text-left text-md-right">
                     <a class="btn btn-primary lift lift-lg" href="#!" target="_blank">
                       Try the code yourself
                     </a>
