--- a/buyer-intent-sourcing.html
+++ b/buyer-intent-sourcing.html
@@ -355,7 +355,7 @@
                         Senior Software Engineer, Google
                       </td>
                       <td class="text-muted">
-                        02/02/19
+                        02/09/2023
                       </td>
                     </tr>
                     <tr>
@@ -381,7 +381,7 @@
                         Senior Software Engineer, Google
                       </td>
                       <td class="text-muted">
-                        27/11/19
+                        27/06/2023
                       </td>
                     </tr>
                     <tr>
@@ -407,7 +407,7 @@
                         Senior Software Engineer, Google
                       </td>
                       <td class="text-muted">
-                        20/12/19
+                        20/02/2023
                       </td>
                     </tr>
                   </tbody>
@@ -429,12 +429,6 @@
                         </li>
                       </ul>
                     </nav>
-                  </div>
-
-                  <div class="col-12 col-md-6 text-left text-md-right">
-                    <a class="btn btn-primary lift lift-lg" href="#!" target="_blank">
-                      Try the code yourself
-                    </a>
                   </div>
 
                 </div>
@@ -461,7 +455,7 @@
                       <p class="text-muted">
                         Lorem ipsum dolorku slamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
                       </p>
-                      <a class="text-primary-desat" href="#!" target="_blank">Continue reading <i class="fe fe-arrow-right"></i></a>
+                      <a class="text-primary-desat" href="https://nubela.co/blog/p/687e2b08-d672-46d0-93f2-7c06c139e4bb/" target="_blank">Continue reading <i class="fe fe-arrow-right"></i></a>
                       
                     </div>
   
