--- a/buyer-intent-sourcing.html
+++ b/buyer-intent-sourcing.html
@@ -297,7 +297,7 @@
 
             <div class="col-12 text-center text-md-left"> 
             <div class="alert alert-light text-gray-700" role="alert">
-              This is a demo for our blog post of <span class="font-weight-bold">Scraping LinkedIn Profiles to Monitor for Job Changes</span>.
+              This is a demo for our blog post of <a class="btn-link font-weight-bold text-gray-700" href="https://nubela.co/blog/p/687e2b08-d672-46d0-93f2-7c06c139e4bb/">Scraping LinkedIn Profiles to Monitor for Job Changes</a>.
             </div>
             </div>
 
@@ -455,7 +455,7 @@
                       <p class="text-muted">
                         Lorem ipsum dolorku slamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
                       </p>
-                      <a class="text-primary-desat" href="https://nubela.co/blog/p/687e2b08-d672-46d0-93f2-7c06c139e4bb/" target="_blank">Continue reading <i class="fe fe-arrow-right"></i></a>
+                      <a class="text-primary-desat" href="#!" target="_blank">Continue reading <i class="fe fe-arrow-right"></i></a>
                       
                     </div>
   
