--- a/pricing.html
+++ b/pricing.html
@@ -375,7 +375,7 @@
   
     <!-- FIRST FOLD-->
     <section class="mt-n8 mt-md-n14 pb-8 pb-md-11 border-bottom">
-      <div class="container-fluid px-md-16">
+      <div class="container-fluid px-md-15">
 
         <div class="card shadow-lg card-body bg-light">
           <div class="row align-items-center pr-md-5">
@@ -432,9 +432,9 @@
                   <table class="table bg-light table-hover">
                     <tbody>
 
-                      <tr class="clickable table-secondary" onclick="window.location='#!'">
+                      <tr class="clickable table-primary" onclick="window.location='#!'">
                         <td class="col-5 font-weight-bold">
-                          <span class="price mb-0" data-annual="30000" data-monthly="2500">30000</span>
+                          <span class="price mb-0" data-annual="30000" data-monthly="2500">30000 + 5000</span>
                           credits
                         </td>
                         <td class="col-5 text-gray-700">0.049/credit</td>
@@ -445,7 +445,7 @@
 
                       <tr class="clickable" onclick="window.location='#!'">
                         <td class="font-weight-bold">
-                          <span class="price mb-0" data-annual="300000" data-monthly="25000">300000</span>
+                          <span class="price mb-0" data-annual="300000" data-monthly="25000">300000 + 50000</span>
                           credits
                         </td>
                         <td class="text-gray-700">0.04/credit</td>
@@ -456,7 +456,7 @@
 
                       <tr class="clickable" onclick="window.location='#!'">
                         <td class="font-weight-bold">
-                          <span class="price mb-0" data-annual="1078800" data-monthly="89900">1078800</span>
+                          <span class="price mb-0" data-annual="1078800" data-monthly="89900">1078800 + 179800</span>
                           credits
                         </td>
                         <td class="text-gray-700">0.3/credit</td>
@@ -467,7 +467,7 @@
 
                       <tr class="clickable" onclick="window.location='#!'">
                         <td class="font-weight-bold">
-                          <span class="price mb-0" data-annual="2532000" data-monthly="211000">2532000</span>
+                          <span class="price mb-0" data-annual="2532000" data-monthly="211000">2532000 + 422000</span>
                           credits
                         </td>
                         <td class="text-gray-700">0.02/credit</td>
@@ -536,7 +536,7 @@
               </div>
 
               <p class="mb-0 font-weight-bold">
-                30,000 credits
+                30,000 + 5000 credits
               </p>
 
               <p class="mb-3 text-gray-700 small font-weight-bold">
