--- a/pricing.html
+++ b/pricing.html
@@ -375,13 +375,13 @@
   
     <!-- FIRST FOLD-->
     <section class="mt-n8 mt-md-n14 pb-8 pb-md-11 border-bottom">
-      <div class="container-fluid px-md-15">
+      <div class="container-fluid px-md-10 px-lg-15 px-0">
 
         <div class="card shadow-lg card-body bg-light">
-          <div class="row align-items-center pr-md-5">
+          <div class="row align-items-center pr-md-0 pr-lg-5">
 
             <!-- pricing -->
-            <div class="col-12 col-md-8 mb-8 mb-md-0 pr-md-6">
+            <div class="col-12 col-md-12 col-lg-8 mb-8 mb-md-0 pr-md-6">
 
               <!-- Nav-->
               <nav class="pb-md-6 pb-4">
@@ -415,16 +415,16 @@
                   <div class="d-flex justify-content-center mb-4 mb-md-6">
 
                     <span class="text-opacity-80">
-                      Annual
+                      Monthly
                     </span>
 
                     <div class="custom-control custom-switch mx-3">
-                      <input type="checkbox" class="custom-control-input" id="billingSwitch" data-toggle="price" data-target=".price">
+                      <input type="checkbox" class="custom-control-input" id="billingSwitch" data-toggle="price" data-target=".price" checked>
                       <label class="custom-control-label" for="billingSwitch"></label>
                     </div>
 
                     <span class="text-opacity-80">
-                      Monthly
+                      Annual
                     </span>
       
                   </div>
@@ -434,45 +434,45 @@
 
                       <tr class="clickable table-primary" onclick="window.location='#!'">
                         <td class="col-5 font-weight-bold">
-                          <span class="price mb-0" data-annual="30000" data-monthly="2500">30000 + 5000</span>
+                          <span class="price mb-0" data-annual="2500" data-monthly="30000">30000 + 5000</span>
                           credits
                         </td>
                         <td class="col-5 text-gray-700">0.049/credit</td>
                         <td class="col-2 text-right pr-9 font-weight-bold">
-                          $<span class="price mb-0" data-annual="490" data-monthly="49">490</span>
+                          $<span class="price mb-0" data-annual="49" data-monthly="490">490</span>
                         </td>
                       </tr>
 
                       <tr class="clickable" onclick="window.location='#!'">
                         <td class="font-weight-bold">
-                          <span class="price mb-0" data-annual="300000" data-monthly="25000">300000 + 50000</span>
+                          <span class="price mb-0" data-annual="25000" data-monthly="300000">300000 + 50000</span>
                           credits
                         </td>
                         <td class="text-gray-700">0.04/credit</td>
                         <td class="text-right pr-9 font-weight-bold">
-                          $<span class="price mb-0" data-annual="2990" data-monthly="299">2900</span>
+                          $<span class="price mb-0" data-annual="299" data-monthly="2990">2900</span>
                         </td>
                       </tr>
 
                       <tr class="clickable" onclick="window.location='#!'">
                         <td class="font-weight-bold">
-                          <span class="price mb-0" data-annual="1078800" data-monthly="89900">1078800 + 179800</span>
+                          <span class="price mb-0" data-annual="89900" data-monthly="1078800">1078800 + 179800</span>
                           credits
                         </td>
                         <td class="text-gray-700">0.3/credit</td>
                         <td class="text-right pr-9 font-weight-bold">
-                          $<span class="price mb-0" data-annual="8990" data-monthly="899">8990</span>
+                          $<span class="price mb-0" data-annual="899" data-monthly="8990">8990</span>
                         </td>
                       </tr>
 
                       <tr class="clickable" onclick="window.location='#!'">
                         <td class="font-weight-bold">
-                          <span class="price mb-0" data-annual="2532000" data-monthly="211000">2532000 + 422000</span>
+                          <span class="price mb-0" data-annual="211000" data-monthly="2532000">2532000 + 422000</span>
                           credits
                         </td>
                         <td class="text-gray-700">0.02/credit</td>
                         <td class="text-right pr-9 font-weight-bold">
-                          $<span class="price mb-0" data-annual="18990" data-monthly="1899">18990</span>
+                          $<span class="price mb-0" data-annual="1899" data-monthly="18990">18990</span>
                         </td>
                       </tr>
 
@@ -521,7 +521,7 @@
             </div>
 
             <!-- right card info -->
-            <div class="col-12 col-md-4 text-center py-md-9 pt-6 pb-0 shadow-light bg-white rounded border border-primary" id="nav-tabContent">
+            <div class="col-12 col-md-12 col-lg-4 text-center py-lg-9 px-lg-6 pt-6 pb-0 shadow-light bg-white rounded border border-primary" id="nav-tabContent">
 
               <div class="tab-pane fade show active" id="nav-payg" role="tabpanel" aria-labelledby="nav-payg-tab">
 
@@ -547,7 +547,7 @@
                 Credits expire every year
               </p>
 
-              <a href="#!" class="btn btn-sm btn-block btn-primary">
+              <a href="#!" class="btn btn-sm btn-block btn-primary mb-5 mb-lg-0">
                 Start now
               </a>
 
