--- a/use-cases.html
+++ b/use-cases.html
@@ -298,7 +298,7 @@
           </div>
 
           <!--1 - Deal sourcing-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -329,7 +329,7 @@
           </div>
 
           <!--2 - Investment signal-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -360,7 +360,7 @@
           </div>
 
           <!--3 - Automate due diligence-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -389,7 +389,7 @@
           </div>
 
           <!--4 - Power people & company searches-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -420,7 +420,7 @@
           </div>
 
           <!--5 - Automate Job Search-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -432,7 +432,7 @@
 
                 <a href="https://nubela.co/blog/the-proxycurl-success-story-hiring-a-marketing-manager-through-automated-recruitment-and-executive-search/">
 
-                  <img class="img img-fluid rounded mb-4" alt="ooo" src="Illustration_blog_placement.png">
+                  <img class="img img-fluid rounded mb-4" alt="ooo" src="assets/img/illustrations/TLC_Proxycurl_Success_Story.png">
 
                   <h2 class="h3 font-weight-bold text-dark mb-2">
                     Automate Job Search
@@ -451,7 +451,7 @@
           </div>
 
           <!--6 - Aggregate Jobs-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -482,7 +482,7 @@
           </div>
 
           <!--7 - Automated recruitment-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -494,7 +494,7 @@
 
                 <a href="https://nubela.co/blog/the-proxycurl-success-story-hiring-a-marketing-manager-through-automated-recruitment-and-executive-search/">
 
-                  <img class="img img-fluid rounded mb-4" alt="ooo" src="Illustration_blog_placement.png">
+                  <img class="img img-fluid rounded mb-4" alt="ooo" src="assets/img/illustrations/TLC_Proxycurl_Success_Story.png">
 
                   <h2 class="h3 font-weight-bold text-dark mb-2">
                     Automated recruitment
@@ -513,7 +513,7 @@
           </div>
 
           <!--8 - Data for HR tech-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -544,7 +544,7 @@
           </div>
 
           <!--9 - Identifying buyer intent data-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -575,7 +575,7 @@
           </div>
 
           <!--10 - Prospecting and lead generation-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -606,7 +606,7 @@
           </div>
 
           <!--11 - CRM data enrichment-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -637,7 +637,7 @@
           </div>
 
           <!--12 - Email personalization automation-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -668,7 +668,7 @@
           </div>
 
           <!--13 - Cold email outreach-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -699,7 +699,7 @@
           </div>
 
           <!--14 - Cold call outreach-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -730,7 +730,7 @@
           </div>
 
           <!--15 - Accelerating growth startups-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
@@ -761,7 +761,7 @@
           </div>
 
           <!--16 - Sales and marketing automation-->
-          <div class="col-12 col-md-4 d-flex mb-6">
+          <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
 
             <div class="card rounded border lift">
 
