--- a/use-cases.html
+++ b/use-cases.html
@@ -682,7 +682,7 @@
 
                   <img class="img img-fluid rounded mb-4" alt="Cold email outreach illustration" src="assets/img/illustrations/TLC_How Cold Emailing Grew My B2B Startup To $100k MRR.png">
 
-                  <h2 class="h3 font-weight-bold mb-2">
+                  <h2 class="h3 font-weight-bold text-dark mb-2">
                     Cold email outreach
                   </h2>
   
