--- a/use-cases.html
+++ b/use-cases.html
@@ -281,21 +281,45 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 bg-light border-bottom">
 
-      <div class="container-fluid">
+     <!-- Welcome
+    ================================================== -->
+    <section class="pt-8 pt-md-12 pb-10 pb-md-15 bg-white">
 
-        <div class="row justify-content-center mx-md-10">
+      <!-- Content -->
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 text-center">
 
-          <div class="col-12 col-md-9">
-            <h1 class="display-2 font-weight-bold text-center" style="padding-top: 96px;">
+            <h1 class="display-2 font-weight-bold">
               <span class="text-primary">Proxycurl powers all these use-cases</span> and more, pick yours!
             </h1>
   
             <p class="lead text-gray-700 text-center px-0 px-md-10 mb-6 mb-md-12">
               Our customers range from sectors like HR and recruitment, sales and prospecting teams, marketing and growth, VCs and investing, and more.
             </p>
+  
           </div>
+        </div> <!-- / .row -->
+      </div> <!-- / .container -->
+  
+    </section>
+  
+    <!-- SHAPE
+      ================================================== -->
+    <div class="position-relative">
+      <div class="shape shape-bottom shape-fluid-x svg-shim text-light">
+        <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor" />
+        </svg>
+      </div>
+    </div>
+
+    <section class="mt-n8 mt-md-n14 pb-md-12 bg-info border-bottom">
+
+      <div class="container-fluid">
+
+        <div class="row justify-content-center mx-md-10">
 
           <!--1 - Deal sourcing-->
           <div class="col-12 col-md-6 col-lg-4 d-flex mb-6">
@@ -312,7 +336,7 @@
 
                   <img class="img img-fluid rounded mb-4" alt="ooo" src="assets/img/illustrations/Deal sourcing illustration.png">
 
-                  <h2 class="h3 font-weight-bold text-dark mb-2">
+                  <h2 class="font-weight-bold text-dark mb-2">
                     Deal sourcing
                   </h2>
     
@@ -343,7 +367,7 @@
 
                   <img class="img img-fluid rounded mb-4" alt="ooo" src="Illustration_blog_placement.png">
 
-                  <h2 class="h3 font-weight-bold text-dark mb-2">
+                  <h2 class="font-weight-bold text-dark mb-2">
                     Identify investment signals
                   </h2>
   
@@ -373,11 +397,11 @@
                 <a href="https://nubela.co/blog/due-diligence-simplified-automate-the-enrichment-of-people-and-companies/">
                   <img class="img img-fluid rounded mb-4" alt="ooo" src="assets/img/illustrations/TLC_Due_Dilligence_Simplified.png">
 
-                  <h2 class="h3 font-weight-bold text-dark mb-2">
+                  <h2 class="font-weight-bold text-dark mb-2">
                     Automate due diligence
                   </h2>
     
-                  <p class="text-muted mb-0">
+                  <p class="text-muted lead mb-0">
                     Lookup a person and enrich his profile, do background checks
                   </p>
                 </a>
